--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,70 +4,70 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:YIh/qN12SrcvwsOs,iv:0rUymWaWRn5uTi0ruSL1F9+swIY9M6sIHEkLs2xdaTI=,tag:/kZXAqxHUzKbkVU2NVIvpQ==,type:comment]
-    PROXMOX_IP: ENC[AES256_GCM,data:vUcYYn5jNjcsnsw=,iv:Lf3BDwQN3uU4qa9AlLX8kPZ487G9G6Z1ELeTGhlSkSU=,tag:ehJhCFo15y3VOIU9tZLjIA==,type:str]
-    VIP: ENC[AES256_GCM,data:YJJNRv+CmB3P/KA=,iv:lCxFt5IbO6XeM2TUx0LUZQSFExSQI3peBqYzddCPJnc=,tag:EgCKtFnTgwL+3n9D32dcMw==,type:str]
-    MASTER1IP: ENC[AES256_GCM,data:8NxHA7puko9OyUM=,iv:bZO2sZAt6Cq7TKsd5qzqnu0LWg9/uZ4rNjP4O2Auy9o=,tag:tVZJVPLYWeD8nd5Z15jSGg==,type:str]
-    GATEWAY: ENC[AES256_GCM,data:KcfzmhfBMY1iXw==,iv:3FR+piiarO6XyTTP19upLC9cxb/qLsvcC3P0AGmc9Mo=,tag:CZjsNxSl7F1cD2euxLPabg==,type:str]
-    #ENC[AES256_GCM,data:370KJFn8tC+57c/j0caU,iv:p+yldNOfMr6P7+NyhW6K6Z5nNVZghe3uN3uj80uMaIc=,tag:ER5i2IDWtnjjkH38oPNCVw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:bX9BBCMVnXbAw8uc9TFoMCXTFaVUzsbpWA==,iv:R2uIEs8SVB9/TAbNqa/9IoXe97cSngQAwCjQZEJSRvo=,tag:XNiI4ebk+wmmdOpwweB1kQ==,type:str]
-    #ENC[AES256_GCM,data:gBxSBBeCKWuMLRLcudMnsYR7bSmEQIWikQ==,iv:XvpU5h7SniTmV3MAEr2Yv2+J+N9nJIOqRvFFMTXwIxc=,tag:qddFUR4rWC5ogP6kf29Aaw==,type:comment]
-    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:B65a8DzGToyjqX7Z,iv:XoYCjf6SJ0l9cQKaP+Wc91nn5eS+6rI7k6peKTMSOtA=,tag:Z319JZwYWEP91PR+mZIcpA==,type:str]
-    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:2VbIRxdmiCS03gxU,iv:Sm5v7bXaDgQShOOmz4LZZIzMMg/FTuUF4Rm2qHU2mW0=,tag:P7FvR67OQ7ZjBMFC9KA01g==,type:str]
-    IP_WHITELIST: ENC[AES256_GCM,data:xVxe6D9OhPxhyPih6fyaLbqiVpRZf5uY05Q=,iv:MZbj1qKwVyVz2HvX102Qyh71g/LEN6zMbDflJQIs9Mg=,tag:QP5y9QiVCAlBDGfEJECTTw==,type:str]
-    BLOCKY_IP: ENC[AES256_GCM,data:oXxgCRYorqG93Gic,iv:Fq4KZxjQuXxGy8SyDc3VKAoCOHJFSV+AMoF2xw+jm1Q=,tag:32cBkKpUV9LYgdG/bkXb7Q==,type:str]
-    DASHBOARD_IP: ENC[AES256_GCM,data:VK3XiPHEN5xApqBY,iv:1LYLm71h/VQx3/C7T6/cLh/6sLt+Eez2gIZ8zhagQac=,tag:tchD2WRZlVYe05G1nCBKEw==,type:str]
-    WG_EASY_IP: ENC[AES256_GCM,data:nQtlK03+4+mYENfa,iv:jZqXWPNaE3131wGTr5CnQ66UE32R6qgqIJCNpGQeWt4=,tag:F3sqgUWw/64Mpu6DUuF1Fg==,type:str]
-    MINECRAFT_IP: ENC[AES256_GCM,data:Fot1tOYH7b2z5hwE,iv:62pOL7Fadj1SIHBHiOwv2zndI3bFGYevkxaTqt8Q6vA=,tag:j3Xxb5W6JdXPWaQSQCMP/Q==,type:str]
-    #ENC[AES256_GCM,data:yxs+qDsHYHWlYZWFMG3F2FHx,iv:rO+uikjgD2pnh5BL6ctaHvE6pV9o/fg5CC5NGN6LgAM=,tag:uh4YIU2g1LlySTHSyGH0Xg==,type:comment]
-    BOREALIS_IP: ENC[AES256_GCM,data:ZHLI9I6YylXL/0A=,iv:o8qZ607Ray7BilyZlHpL178564WVQOA1arf7B0ZOZog=,tag:h6CG+SjpsYF2QXpLd+jS2Q==,type:str]
-    #ENC[AES256_GCM,data:mVsMfttXdZi0mUfNP3TI7A==,iv:rnjOZmFXuBTDMlAT4mLQ9PV4LchcTk/9kKJJELZVsMA=,tag:vJy2zKfiIXuxXK7DK8nmPA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:AYcCKk1rI8/uKDxntw==,iv:RkhKZ8bXXSR82NysjvsQ0PyJh9nXUplYOA9j98RfDuM=,tag:tVr7lH91v+/2qb3SIfWhIA==,type:str]
-    DDNS_URL: ENC[AES256_GCM,data:d0T94bpPb1kYvylD6DTQ0wHRwnc=,iv:21Q6MWe0seIbYgq9/iwThgA+RiQvFqc5i2EaYCZDRzA=,tag:+GNDBBVqXBt+y8pc++nVbQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Vaz0fimgXr5ofRIxWUOwtbiZ9A==,iv:QNQydIWHkgTKeY2waipJdj0ql4ovOtvlNeNtIVXOIPY=,tag:F5BGa2uZ168x+bS24hQSzA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Aqsbb6HlJjj7l3zWEqKvq1SeGAyhSfTDD+a8BcNcDHqBq4W5QMo7mA==,iv:+o0HJLj/rcUNGvTShmn9O6l6OWhLe5Mjj1UStL+V7Ds=,tag:aRFGU0B+OLT/TVrq9MvNaw==,type:str]
-    ZONE_ID: ENC[AES256_GCM,data:vRtLt3y2kVkixBTXG6Yig6TU2hBh12DGtsLTTaVBik8=,iv:iFc6buaypltwH8ldRe6ackYTegsuU1W+vE1N7FT6Je8=,tag:NzBKEfkBylOORfdWqbugsA==,type:str]
-    #ENC[AES256_GCM,data:Img3DE80Skg=,iv:2twphHe5flBysw8gh1F28bEz1v/XbBkdpfB5eSQUiM0=,tag:Aoh+C28cgD3CJ4rHsnE4jg==,type:comment]
-    GF_ADMIN: ENC[AES256_GCM,data:SmUEWVM41U73,iv:8n6JyfbL65qB97lOtNqyMmkd24mz3bFVYWsBjhmRSaE=,tag:opsD+QOOemLX3hsz6rVcNQ==,type:str]
-    GF_PWD: ENC[AES256_GCM,data:87HJnSyvmB60EZwRg8qIne+oOJi4Dn+p,iv:U1PCAXWE4IE4CmUrmswRSe6CSlRhh9rePwvuTkMKIio=,tag:5C86tJBWbx74GrXTUvRa9A==,type:str]
-    #ENC[AES256_GCM,data:UAoJ8F7fZdGz3w==,iv:yWkcCNQvEc15kOaoEjrvvTHG75T88RCDnSUVw8/i+84=,tag:5px6MeCjkBpxzmV7v2vh1A==,type:comment]
-    NEXTCLOUD_USER: ENC[AES256_GCM,data:xkmVTEO0LQpo,iv:0fExuCqIL+MpmWxic3PshzqPd7WavQ5nBl9e/zVICCI=,tag:kXQEzMAOnWsQMsjme4aAYQ==,type:str]
-    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:fRS4pr60nPT/1rWaXBT4/j6VgdA=,iv:v51mpLneiBUKkQD41vNrCfq++jyTFFfVjF+0Sz5BVOc=,tag:pwiZx92AlhsdW+0P65HtxA==,type:str]
-    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:fJJAUe3k1KeijA5j2x6Zh8yUul469MMC,iv:6wQc9AAO+DnujqB7oWLVNnoIPe7v3zM6qiBzBqXJSOY=,tag:HOaYlj6DY4lq+IV2Jp9nQg==,type:str]
-    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:jlQbLiyKxKguD63T5SDtE95FXg==,iv:veERvskQ3WndQrqGsZytnbu339L3p3JllTX0HFdwJMA=,tag:uZIAkz3qCrPv4jpMQSAZoQ==,type:str]
-    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:XpyvcyTW4aw1JqonH4BKwrUt,iv:ybAhiDus+4p2nJMqNAetK1FRaUhx3W5LOcrSYRe6Vh4=,tag:cZc2TUFJvgbCy51J5d4b7w==,type:str]
-    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:TLC2tmMPDF49f0h0IUn+/ojXiI5QrgM=,iv:7BYetinGlPSePbLKVWCYjq5ZpBwf1XjZh8vgtrXq59k=,tag:ivm/hJ7JRKY49+hX/1uLTQ==,type:str]
-    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data://FWGb2WB9iLi12H3VpfTSvE+DVdzIcl,iv:DYITh9LUQ6rcWsLcJ1EFZdl4rBZAzyAha46R/Kul46c=,tag:LHW8bnpIjJxBF/crdIgJow==,type:str]
-    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:VBqxRQqJN+gNyjADCAm50v9WNu5dY1fB,iv:/rhZrKjDpCfEXNKotaJBDPPGKROgeZQK+nh/go1ORys=,tag:5O8CN36BWBNWMMlHbToylQ==,type:str]
-    #ENC[AES256_GCM,data:dbtECW1/YUN1iLXpI6Q7QGQ=,iv:/T2fPYq6EQHVYed3t5p+dt4k+CfPR3/1rusIc5SmIOY=,tag:NfBqMo6vHcEjkclcdTW1xQ==,type:comment]
-    METUBE_NFS_PATH: ENC[AES256_GCM,data:7JqHJ72gnOWN6KzGyHVdydEuRmfkC3Qytos=,iv:RIz0Ae1CGX+iCDqSqP+nAo6xgCYezKODPaUwSpcRAOI=,tag:XmHcZY2Lzfg2XQdTxQlgiQ==,type:str]
-    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:4RBKe0WdIxPXfVnPDVprnSv0AMMI3Y4XLY+TQKRvUDzuCzRLlcVO,iv:jSfVujzr0uPi9XV38ukbqd12Y4wpsLwsteAbtASpe+s=,tag:ZbQc0I3e7NW9CsUK31ZXiw==,type:str]
-    OZRATES_NFS_PATH: ENC[AES256_GCM,data:da6foxMj8kZq2+LUaf3BsM/Le+lfUBOBHU+LXbY=,iv:kymfuRnVKByqroWCM5MNFOYRlmzbOjwX6NTFYmtePM8=,tag:JimPSIScACG+GJO0MyNrwg==,type:str]
-    #ENC[AES256_GCM,data:Q2pFNYENN1WdF4W/10G23f15D8cQn6hpAwzSaHyYeXEixPZpr+KBWlrE24ChqzFEGXEnmKTdPr8=,iv:imKtKyFCyBT5Mxq2bMbgwu37NbVx0dFTvQVJV6CVJi0=,tag:5OJPJuUufbqaUTJ+H60B3w==,type:comment]
-    #ENC[AES256_GCM,data:A0kUaG0T5gPj+BYYc67LzpNVHGq/mKTM2Q==,iv:1YsyNKmYZVIVOZQuzuDHd7ReP0NUTvLq51iVTBJzMR8=,tag:KD2z9s3rMCjztJmjSa7N+g==,type:comment]
-    #ENC[AES256_GCM,data:QBscsL36LEHCeMFU/O3y3OzCCbXxAW12dPEthSoHb9yIAwR1i+WuAQwoBmQy4U2fv7o8vDvsqYb9oMqoIGqsobIzYYHR6M4ky5fPFQg=,iv:4Np8vwlkJviO68OAOlgt6dZuRWidqFdPLpaeMc+Tn7c=,tag:0pSo17BGXvSqLuBLUmqCOA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:xUNrr02Vc1cXTKgYbS6YuTS9ViX8dYMY4n5HOE3ik836MHS6UvLBrKGfCg==,iv:9lUIyTWctjpilp4gn1WIyMTXNsjre375rXei3D43To4=,tag:4TMLtHSSzNTf1zZ+xtdqjw==,type:str]
-    #ENC[AES256_GCM,data:OUZnbro5Rc82lfzzFy3LALOdkVRGsAIAHg+Lh2h20CyKHrsivWf/kFiBcXm8X4tdreVPiUYyz3AaJRXxH1yf73tr7Nn8B68=,iv:KXz/+8tOmwoFfGFXRFhpjigMXCs7MPH4/KDmDBGyEz4=,tag:wjtUaccAC73Doi8dxxmQhQ==,type:comment]
-    #ENC[AES256_GCM,data:OCC8YPbYZJ1Mix+zF0Owd8UKV2cjv6dpYgBRVl7YjA/rplKfVI+heU65Lot5hF0TXJEXN58T,iv:mx9+Ts2KRxtxfQ4bcEw7994yx/t0DLcmGkJnb3fSuIs=,tag:IBZwVwSUT6oetjhgGX/Kiw==,type:comment]
-    #ENC[AES256_GCM,data:A77ppfTWKGnGnvuQ9eZ9rp40bgrMin7dxPz0JuLiwQsV92s=,iv:KYCr2eM/HF6LtSkWgVF47MwI12xwUgk56KD0dcwJtrY=,tag:NjQY+Qcn4YBbnRapnNIS6w==,type:comment]
-    #ENC[AES256_GCM,data:WkSQxVGhxTyI/R8so/nFrtzOkaGQPR7S0uRepd/xu2GEEVrhH+yb,iv:+Hr0fNSqkgIaxCZTQV2tYkVG2SMDg7CTWwxao+EkZlg=,tag:lSwW1PgyRpL4vUfSKUWOkA==,type:comment]
-    #ENC[AES256_GCM,data:Qknxix+1i0R1LJN2gt0=,iv:rhws4QqKDjdy9acfCgzJ6ttamtZwl2+SKCnirTUgysI=,tag:1BmE1485EVY6InEWHzCvEg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:oJ+nPLOYR/+H1OWk8Q==,iv:AR8Tc7XME0E6P0GpG4UjWGiSN6wSMz/1STw+DYv95v8=,tag:IY3U18iHsq2z42bL4wkpEg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:cjDtiwlcQYZcxWD+og==,iv:I6ZBXtvCtHI61UcEuu63RgcvtDBQmpdt/zFSN+zypIE=,tag:EJRfSUBhJ/4t9lYR99P7xQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:+imMiQ==,iv:xijoPyMWJvpQ+EUsk2iacow1FPm8serPjGQoVGN9Etw=,tag:wNCn7MFJ8sGrG+r6MuiFGg==,type:str]
+    #ENC[AES256_GCM,data:w02UJuulGdaPYcQZ,iv:HsYHy+O6iagB6QeCqkIKAerocIs2eVHkABhQslhCHnk=,tag:b+cLq94hT775PHzxpRy9gA==,type:comment]
+    PROXMOX_IP: ENC[AES256_GCM,data:vgk+rRKntV1lo1I=,iv:nId5C3rSJGCJnDl0o+/Nma9W+5QOKvmvbR6fkdCHga4=,tag:OxaR7CiETwVGkApAISczpA==,type:str]
+    VIP: ENC[AES256_GCM,data:L78xR6YVbIGpyUY=,iv:lKU2tdOkEcKT2kS6TZ3aVu7S0UcjtBQigAZOAvY5oFY=,tag:OBiShCzhDbnZ/Wi8AZ3ghA==,type:str]
+    MASTER1IP: ENC[AES256_GCM,data:OkFHKx2IN4mcsOY=,iv:wlGqxA4NvKgYjvyQSQ8itjBu4moJx3Fx+92ZP9evtJQ=,tag:n9ZR2fSeh20HEt0hDXNU5A==,type:str]
+    GATEWAY: ENC[AES256_GCM,data:R8awA+Hi/xYcEg==,iv:VJmfE0Lwsw8/4OBpEZRrX9U9O2f5roOGFhMDaIsozyU=,tag:JilShtkOVE0g0+RjQuinsw==,type:str]
+    #ENC[AES256_GCM,data:JSwQHT6CwgqyqJI0j73n,iv:nR8B683H2yoqHUBQUf3iM0e7fwgWtx9hCtaaAob5U/A=,tag:AxHUC8Tfi0nYEDV8kRlKpQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:nLwLKBDdaqFz0Ku54QJ0TpZ8XyQmcEjooA==,iv:1C6MuNVM0G3fW9IWgUY3RWz509e4U/CZ42PW2H1iwh8=,tag:arOGCWbd2pKOIg/0Qj7GUw==,type:str]
+    #ENC[AES256_GCM,data:vO4oIkgva6IiBXANv0+kYhT1Pq3fq9aboQ==,iv:2vUtF6wKZHQ48+2uZEqyld0m2ueL147bQPOkAjC8tLM=,tag:tz7pHJ8Mzurx20V+iqRX6g==,type:comment]
+    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:09RcLljHx179kiaR,iv:slGBeiV6YFoBpRli+2fJjNX/+IbYuB07RFnq7E1awP4=,tag:47wcKQoqDuPJ+FL+T/VHpQ==,type:str]
+    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:a139E1YpAtbNuGgp,iv:FxZqq0OKcVL/haMQ0MGlnaxWSfr51NBB94dRry+rMh8=,tag:CabxH/Ue0uuN0ppxPaAEMQ==,type:str]
+    IP_WHITELIST: ENC[AES256_GCM,data:vZkV5mRFG/7XtgHfHiJmya+STdY1Hg0MJkA=,iv:RRJnsDSOEkU2Z5e9BlU+CW1Kd/60Y95NisIc8xdLYdA=,tag:ijuBdahtxi5E93MjSe/71w==,type:str]
+    BLOCKY_IP: ENC[AES256_GCM,data:sKSebNP+appuzZJV,iv:t6RsE4nO54nSnIdyfdOb3kvc4AZdQPyi6CbzxXGpdyw=,tag:Xs22DXT0IZtNRqFdfctCIg==,type:str]
+    DASHBOARD_IP: ENC[AES256_GCM,data:UiY74N3FvUDnPLIu,iv:5wnwgBblGPOinVMcxONSJ27cFjhtyzOzbLEcT2BQeo4=,tag:/p0Yleyr8o9Y66qMBzTNdA==,type:str]
+    WG_EASY_IP: ENC[AES256_GCM,data:M6qGiiTtJ1Z3wimN,iv:B4eALRbmYxv0qmdwF91iXPsBqJr5zJvp2k4ShgP1HFU=,tag:SJzxksW4d1+rPnhEimOYdA==,type:str]
+    MINECRAFT_IP: ENC[AES256_GCM,data:zI0HNR9AWHD1R0TM,iv:45k6Z84uxYosa0MmcmcncnJfpZmxgApcJUSoLKPjOOo=,tag:xc9BICcar/XwvX00gzMp6Q==,type:str]
+    #ENC[AES256_GCM,data:tVj05yJsORtT/5UbHjq5n9tN,iv:1S7moBy4k3HQzUQ2T6F2aGJy5QHHqoiAwJ6p3KJhC3Y=,tag:TGG5v+HEXnrtd/hOnev5Hg==,type:comment]
+    BOREALIS_IP: ENC[AES256_GCM,data:astZ6p6ppYL/Xdw=,iv:0QOd+w03HvGQlNXfNImqkT7WWgPqOzJGGMVf8bQf1AE=,tag:TrcNAy/x4EJqJDPd64OhuQ==,type:str]
+    #ENC[AES256_GCM,data:mfzEJDL9vs8Kw7PmM0JOIw==,iv:LdbfztB94JWtqi6PRJjEr65miG3RO7sam5sjzIVZVYE=,tag:f3LRRW4WUG7+ckCokN333A==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:tZGGMfphmVVVsuwTKQ==,iv:DOxn0XFElBqYBRaIluc+H2dTpsihs/p6l8Zz4rGAcvY=,tag:scIWU1ROcMZOs/nFDGZh2g==,type:str]
+    DDNS_URL: ENC[AES256_GCM,data:7l34iRLkwl1Mq0e7Vrn1yEEdBCk=,iv:QSWtCXedYlqasdIC1rQvRcf2ECHoHtcdyGXJ+CU70b4=,tag:t4BMS5MhloNzj66COfrADg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Nr0I8Y5/HHDz497SvX1+uN9b9Q==,iv:u0Cgtu1CYl1XqAtShVML0vhfYSUKgSCGd+j56NE0jvs=,tag:FN4SheR4bJsZhHWxVykxoQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:yYFoeYt5tKoCGHQcLC9mgL3RhasvA1uGxtbN9t9dayYSYvUPVnN7Zg==,iv:vKRvh5EdQkkwriFOI+nEOygQwQXn2lw+is6EC9z9fus=,tag:P7JqVHSUHxAKZuJhSXHlWA==,type:str]
+    ZONE_ID: ENC[AES256_GCM,data:xDEOBvfYUkagfg2v37FEgiyZelOaV62GhxUtdixj1as=,iv:bvN7XXim2xWAvTlUuoAsBQEHC7p227wqZ7G0dwt8oRI=,tag:mYhAWwcadRlmigMp1ZiBDw==,type:str]
+    #ENC[AES256_GCM,data:Eso7gcNMAuI=,iv:ffGW5tBPfFz6GP2kSUc08RU8FmD6Vej3MOFeGjHDWGg=,tag:lNYZwcwPqaz807ELSlNkug==,type:comment]
+    GF_ADMIN: ENC[AES256_GCM,data:BrKs6sjVYa/m,iv:rp91BMPEjXtZ2cuFCqlmI84pvWh/fGFSbzxeS5BCoc8=,tag:b06BHH3dJFRYzR5YrZ9Cvg==,type:str]
+    GF_PWD: ENC[AES256_GCM,data:q6dkWZ1usZPUwAiX9gQs0YIai8DWmw01,iv:9egcl3tI8WslDZHSJDLN/MWVMFEq5T5UwkwFUsaGmnk=,tag:6L0q5432LqEhOx5slLo72g==,type:str]
+    #ENC[AES256_GCM,data:CinxmT1czqQlng==,iv:fCUaT8Yo7mLrjyz+j4Km3BhtIM2VomK3G37MD+8hQRg=,tag:Ppvnmb4pRbw1BzpTcIHadQ==,type:comment]
+    NEXTCLOUD_USER: ENC[AES256_GCM,data:fG87uOkejVUN,iv:9Wz88fWxwYnimIA2g/UbCqoB3/ceEVcHtlgKdiXQU+4=,tag:dsV49ydeNKmqchoTQQBfGQ==,type:str]
+    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:+EEC1b1T5GquB12cte5IlJINSww=,iv:IVYjXxkSfSatuuPSFtb8R039mbwk+CQLv7biYUHktD4=,tag:PFfpLIjfXGXtMQBF0t1rGQ==,type:str]
+    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:Rx7soGd5B8sTo2+AV2PTFRLG1FwbZ6tK,iv:NbYD4/7NUyouYl6767M7AHuM5tuYv6/3vTSMpeMVywI=,tag:gWir5mtlkQG4xDxmOy6fvA==,type:str]
+    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:nKwSzZNBNWvExn/ELClmyTTt3A==,iv:QK7dJcEZPbyN0J3HPIbXO/0m+Y47VGoJ5luLFrgbmK4=,tag:8t9XS/QbSeYfT5PE8FlL0Q==,type:str]
+    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:Gx3OVmek80M7o8rO8b5/Rb8h,iv:CPh+m5pTwPi9Gf1FNgpvgho7q4uB3RP1BTLliZS9QCA=,tag:1H5xJzrHTasUDpxXbD185w==,type:str]
+    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:Pw6dMeyyO5hC+MTF2ja+38V4/6lLAMo=,iv:ObYH4D8H/E+601hIWvHAlul0HVRLUYNgVWv3D0dkwbg=,tag:x6QipJL6MZoQ/+D081wQsg==,type:str]
+    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:uzSvnNjYniiRIDCE5rZKT4CsrPoGbkeb,iv:WPhqoOmhohMn+/Uz/xvZ9RuAKtCT6LQ17I+AV3K/vqI=,tag:T6Q+lvi27nCZyTwq+/J4eg==,type:str]
+    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:nCYxjRZ0JAe7xEjmmdCVSceLOlsa4jji,iv:faruqtHcRoRsshyq4sBa4MXsKzmJpb1AsQzUpY7nqvQ=,tag:spw1PJ4KgFOpEmJHpRcDTA==,type:str]
+    #ENC[AES256_GCM,data:+gA0axlduVTq8+fiaUsTmT0=,iv:jsWngqf4qUPuzGieSvjF3658bvBjBt2GwBeNFieI0BE=,tag:7mSRkb5RHgtTWMAgkOzZVA==,type:comment]
+    METUBE_NFS_PATH: ENC[AES256_GCM,data:NoKJrskGhiNyiRWAdAKcVqcTltSnXsP8yWk=,iv:1HQG7Y5zR9jGtc1Q3gy30w2oYxeUQbKwkfUXQt5pkOA=,tag:sE8mNB98fTTG6fUgQjWMSg==,type:str]
+    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:EWd+FS7uUbiDXj3wie07aZhftqtXsow62iTFAtiJiLe6uw6nva02,iv:GSZuCzCjFv9nhSWBEY8WJD2vysGLbU8MnFNDMbqnIXI=,tag:iiqtH6zxbyL+WDRWxJA/cw==,type:str]
+    OZRATES_NFS_PATH: ENC[AES256_GCM,data:hsNWqcc5W2Hpf8tFbL1Pbi94ZvI/gSCKHT0zLek=,iv:S5PdndbEo41kxCZJP8S09MOWFppqZTcYSDhLnnVuh7o=,tag:nRmreuissvKRULRodjmcZA==,type:str]
+    #ENC[AES256_GCM,data:oUrhZY5SYBlLA59CRQ2tWIJkqHzXsb3OEZxSrFM6L22/eqCtTob7JhuDJKCx3DHUUac05RIsnAI=,iv:7zaB6dJKweFxNASvCBC15JNTenAPDo8Fcslfv8XWtzA=,tag:oLunUvqGMrnaG0jbHl79SA==,type:comment]
+    #ENC[AES256_GCM,data:Jgh3SzFVVlS3MCejlctiuPDZH7cyzCGhLg==,iv:p4VCOooVgZiYq+HztwSCYj9g8oecsZe+kNai0tDpViQ=,tag:P2WxYwKzhspP/87556Sp5g==,type:comment]
+    #ENC[AES256_GCM,data:EbEH+H0qdGHTZ+7r2kjwlOa/0vUmaIoHFlBMzMsZjJ/n1b1ktJe9wfbld6hes30EVVgG2qe3fp8Nj8vqZFXnSz4H2EIIrH52SrpUKBA=,iv:AutxUKfedGnivwGB1/OvDvV5bzJ/YJywO1bxEoKx/pQ=,tag:hY4byKTx8ABRoM+1nMo+MA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:JUry7hQTN0WdR9hM588oNS4+Qq2UbDsy+xbyLktU1aNw26mcyuk4nf9Rtg==,iv:k5s1SMLCc/DQytAJe/3wMBpXDe7UITRjaB3sD2tfiTk=,tag:PjULBCLj4Td9M+33S6LE/Q==,type:str]
+    #ENC[AES256_GCM,data:WrKYCZiMnlVT6zs+D+4XKtzceh3DwcQMQNsLfmxvMLkPvGSkgnG1FLwQDSOz5FFjVf5k7+EhlbG/mkY9Z9qyLkfqk+Wzv/A=,iv:7u58w6C8TjAFaOSlan2jxSKOzorEeIVuUy12AR98EwE=,tag:fNr85PDNDTYxlMsIU88lLw==,type:comment]
+    #ENC[AES256_GCM,data:Ir2cZ8dwDAqrflX8xx5otd/f1mcgBsp1ZDSUIDtaBHXy81mIAvNmVgdMhtltR8q8kOIm1WUW,iv:/MNpZAhrQjVqkm1KFvJY5OIGsA3nXD/f+C4KzZtAlq4=,tag:jYUY4aRK1vxmVtTIB4Rc6g==,type:comment]
+    #ENC[AES256_GCM,data:pID4t27xXbErDh32CTVbsXjzvpN54nM/Zq8oswOiwKFv6Lc=,iv:RlsIiA1J6vEoYE85GIJTymrcQYF7GTPhubaRxt/ai+M=,tag:TLw9dupaJBlWXsFealmoYQ==,type:comment]
+    #ENC[AES256_GCM,data:lRZjp/sZbZWeYrihBoNGKaFfw/ooz6NOii4Yjns7SmpCwjcq4Q0W,iv:YbRAhahvxS8SYq+1D18NwH7CGVlCJ21WNPtDsVnh9PU=,tag:HnoN2LoDME/XIktgwaCEuw==,type:comment]
+    #ENC[AES256_GCM,data:B5ixTNuPeSH/FgjTRjs=,iv:/EpMWq9M6ySVox9jrJZyI3drb2kWxx+15oyq0AXbptQ=,tag:T6GpuVRwByeiVHHhRL9kOA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:PFlqk5o37fpofXHMIQ==,iv:hl7PkRJJjlSSRDoosjxWL1WBOdJU+pWFNQVYTMUyGms=,tag:ZFqDTWGZjgr8SV9m9uQtag==,type:str]
+    SVCNET: ENC[AES256_GCM,data:mWBtAHJt9Qv+BIYn5g==,iv:fYVFSBh76CUp8ZrKa70LgQ1e9qc/GDpE5fKnQJE9n/o=,tag:d27gNkVrpdLnb9HRS37KWg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:+5B1Uw==,iv:tne/hsuFRm81ImubGu1PX7Y7lprsuwdtbhsnHFk0xD0=,tag:e7QyMjQQy1YH+ZLjflG1MQ==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrUUF6TVk2UWJUVTR2blN3
-            clBoTi9TREI2RjVtazBiYkw1aGlIdjVRUUJNCis2NG5paGsyMFFXZFpFeDBFQVBQ
-            S2o5eTk2T3gveWh4SnhueStSNHVIRVUKLS0tIHM3cHpCMDBnejJxL1o5bzUxZWhv
-            bXI3N3RsNGk5VHNxcTYxcUxQVVZIZW8KOnZHvk0GuBmVEg5Hll54jo5fSOCE3zaY
-            /HywG7ggjwOpWTQhFGesiAuPICYGMhBg365rLLG5BZAh6XnqEGEWSQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCV0xPUnRrWE5Cc0V1Wk16
+            ZXZKQ3pHUjRlWG5OWDVPeVZsdVJyVEZ3bTJJCmNTRVhEbHZKSXJQY1JLV0NBM3BP
+            cE5JUzdDL1Jwd2JJNW92WW1tVFkyckkKLS0tIEVQaUptV0VJS21SUHFKbDVVZkk2
+            TlB0Zjl3M1J5bVA5VnFRTGpoTlk5ZHcKfXPYA7BWsUnPX64tvEtgUSDiRZrjVouT
+            w7CaQokfsmyLO+IHUhNfPpAqLbjbhtKMzFRxIkM/ABY3c6lK64beGw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T21:03:50Z"
-    mac: ENC[AES256_GCM,data:3wciIuNcNEJsG5HK3gIrkmBqhNEl7BW9VW1hhCBkt2W/kqiccN2IKo/wFatWt63Z172iZPbgkb5H/42ols33/gYz4JJbZGBURy8Q0myYd65jwMuPYiSgI5wy7DHEo5+aherOTIGQCOPspIC5ZZcMQCMKY0TE9+EFnk5zU/oySrA=,iv:nN+oH+hVjvk16c14BPi19dOsP5rhwMd3WnQfZ9pj5BM=,tag:sfmvCTEISEXZJ4oRden8YQ==,type:str]
+    lastmodified: "2026-01-25T21:19:33Z"
+    mac: ENC[AES256_GCM,data:eWgQiDnNFJ2UziesCCOTcJ2ysRYJPUozBaT0K4JtkqK6uGqjbsLti9BNEj/rph3LFN8MWP6rLVNGt2L7n0UxMevQ0GrqmmEhzhzqFDB92ANzTB5tTJVOV1aMifjtBUfo62sSZvprNBmvwCphfhyUuYS/pLfRAJgCkDA873KcV8w=,iv:m6hXNd8cdjINdeYYRlPc1ITF6BYqRYdgtUsk/ak+zrg=,tag:v2Cot2QhKOfBB/a66No5EQ==,type:str]
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.10.2
