--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,65 +1,65 @@
-#ENC[AES256_GCM,data:19giWHqaeDlGhxDb,iv:wx0p9Ea9GPY+yie419Zp6q3kc0O+QPFs6Os4YD+44KM=,tag:3GABG0XDUjKC/UAdVkEbrA==,type:comment]
-PROXMOX_IP: ENC[AES256_GCM,data:ZwYIPo3E3bVVJ3A=,iv:tr+BGaTRPU4Nv2unGu6g2fmtj7MB+MVKK9WQ8/Dwng4=,tag:lQL4MI/8dH7UD1RyGJD5NA==,type:str]
-VIP: ENC[AES256_GCM,data:U2awUTp2DIV8VLE=,iv:taLn11qIJ4ElIndWO//wCOG7lgTtakhfkYaPDy5Rics=,tag:jlz/ZkXP6+u83clxZZG6Bg==,type:str]
-MASTER1IP: ENC[AES256_GCM,data:Pqp5LM3NVAiu06Y=,iv:KjPm+8ILvAJEB6teHtCXu+XbwmUteDWWylRCU4J+kZ8=,tag:BvzXOM3aVS7ahbl49uk7xA==,type:str]
-GATEWAY: ENC[AES256_GCM,data:LPNI7uO3TPehYg==,iv:K//yJhMCpMv0eyET9RXaUo5xle6dXTL7C5yN2dB8G4c=,tag:SLem1YZhPHBYH4b5EC7wGA==,type:str]
-#ENC[AES256_GCM,data:hERAz4u58XT9OkY50PLY,iv:v3TFAZbnVpuzVO3N+qj5bjWIlUOa4dRQP+MrclIWg+8=,tag:QNI2vpfcxiE5zpCsDOdf0A==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:SyLopIHCi2AobIzanmI0CjtBVEk34SCW7w==,iv:uUYhfE2rmAy7xJsRejf3NCx93pb7M9bQDoZBZKpw2Mw=,tag:jZwiz4NHcUUbAqXfod9kgg==,type:str]
-#ENC[AES256_GCM,data:XcdSLDxvnGHenrcSGbo4U+zSmkon0GLixQ==,iv:x2nWLinPMkyMO5WMsPB8Ojks2YBxUTeK7NprjtOuebQ=,tag:1Nj3nL7P2i8FNNXy5JFUhQ==,type:comment]
-NGINX_INTERNAL_IP: ENC[AES256_GCM,data:G6uGjxLEEccDkUVz,iv:9xuZWNWYCggLJZyqxaDw2L9hKSdj41Fdnzu7xlIpL9s=,tag:GyF7LgUQeK7X6osnj8TY4w==,type:str]
-NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:Bm3ZLdH3P7cDq8MI,iv:IPCj9Lqc6gdk2Ir4x4BmMxybCp6/Xi1pcaW437JGUtw=,tag:iJ6lIJPt0oEhxQwP1jcFSQ==,type:str]
-IP_WHITELIST: ENC[AES256_GCM,data:40YRIOBD6PtViZaDtVV1p0BJcGx/IpwNEpc=,iv:oqoNOM6aNM9oY61/uohXQwuPRhQYgpohV8N4Z9BE42o=,tag:uuu7uhrwa+ms6SSm39xPqw==,type:str]
-BLOCKY_IP: ENC[AES256_GCM,data:taF/ccV5b482hXnZ,iv:wHno6BIra9xgiHpZXn3ADAXCBlE1NPuI/VvtkHxjn0M=,tag:tlW20mATxludExk/RpW4Gg==,type:str]
-DASHBOARD_IP: ENC[AES256_GCM,data:Ue8x4x29velvFA+f,iv:WKeyv6R0sYZLNv+6yn+m652dzgMkVSfqxwWp9JOZvSQ=,tag:Gfb22Mp8GDilNetc5uen6w==,type:str]
-WG_EASY_IP: ENC[AES256_GCM,data:yZv8KNq9mXuJK1Pq,iv:0piMs/KhJTApxdezC2vjYWJA4DzZXQECGqTON8LePgk=,tag:XjjSdFlZFIS9rDwVDpNPVg==,type:str]
-MINECRAFT_IP: ENC[AES256_GCM,data:1XatNugp5jmicGC4,iv:wqj8kWpdXWBYZTsStyLUXvW+Z/WY76cNjHiGLJitWqA=,tag:O6Ie8+NEshsIWZEPXDZThg==,type:str]
-#ENC[AES256_GCM,data:motAPFpGH/mHPMJSmspBJO9P,iv:H9Z2SLiTMaueE33Tp7iRdBifl+SaiIDXWBh1iUuS9TM=,tag:FOsi89gvARhQdv74CCGlQw==,type:comment]
-BOREALIS_IP: ENC[AES256_GCM,data:srGHaynBlDVyGG0=,iv:cF7VRYIy44B4AKvhaa1xDWwCgRhsiKPpWB3XjK9KjPc=,tag:JLqJ0z4bkF46FC2gFpjOcQ==,type:str]
-#ENC[AES256_GCM,data:MNpmHZ6RnVPxjM6azb8Usg==,iv:s1SoXjRcFbHxUBy6L2unFMIQjfBG7Z2LzngM8tuLPvo=,tag:pIwI4Jf8lwYsZjSz0DC+mw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:4DAL4NYRUZvAWtkHyg==,iv:512cWsuQC5159O81TVs8Fd5MCYH4arPdH3CFAN0J9yo=,tag:pCRIsMzGouQDE4Wyptvgpg==,type:str]
-DDNS_URL: ENC[AES256_GCM,data:egYfaJYWDPx7K0DOkDiuSYqauLk=,iv:n0S4xxRK2pgqIMxuWbRAiLGFs3kQ698dAycoCrrkdm0=,tag:pdxAOPfEzXPJSAyNW4DnHA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:vSItDESmR1DZWB4g0Yf4MfFkcA==,iv:62O46+ONiCIZxy9jsB3xJKcjtN3SiroA+3cpAURuRAI=,tag:0XufWW4Lnw0Mqx05iha/vQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:5I40uPy4lfcU6lTF8HdzTeatwFyRvn27TYa8s+heS1mJwalbYGccJA==,iv:Nv0i9U2Bl7yjFikhZh/k3VJ69POD3PBKlK83CSRl06U=,tag:4b7yZmWSHJK6UxmmCJuK7Q==,type:str]
-ZONE_ID: ENC[AES256_GCM,data:URVzvGVjTdipmB9rcw52pHcOuAbsDOQnMmubxeaTSyM=,iv:wCBIf4WGYZpOx5cSp72hrMfSJvxsinwrZhbL6uXxWm0=,tag:dSH1YzJP7nrMorxQdj+Wpw==,type:str]
-#ENC[AES256_GCM,data:2fxzuEV6Wis=,iv:SHf9lsqH0ZWfYB4QzVz86Ob7N2Y6jhmY4cf7OdHhNwI=,tag:xdQg0uIO88QVt5erEjh45Q==,type:comment]
-GF_ADMIN: ENC[AES256_GCM,data:ccJHUIHBPUkY,iv:/DFOXwYgPR5qjda1J4SgtbBwc5NjhzuRa5el8OXTJKI=,tag:GNJWYm2M0HdDR3Ux6Q7+TQ==,type:str]
-GF_PWD: ENC[AES256_GCM,data:/k48ZVKurObX7vSv+jzkCI58q6MBP9wW,iv:U6rIWFXJvgvBvC6+kYvfiIGHtarMPMMxwSVG/ZPY+do=,tag:KmSgg9B7HypbFe1382LnUg==,type:str]
-#ENC[AES256_GCM,data:rqybH6jGq5zxzQ==,iv:ez55etH5+FcdmqeBPUmujFkEXaqRzyuz3bCJxje5ilg=,tag:K0POPtjtAhLg24UNjlNjXA==,type:comment]
-NEXTCLOUD_USER: ENC[AES256_GCM,data:lSphEZ/Z3frv,iv:sfzO7dQ2YnjGLyhUd/BAdbUUHmsCx0vX/wQhqaBx1FE=,tag:J2071V7trxmSGj9SpHu1YQ==,type:str]
-NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:cjat3fyWpXGE0aaWz3wo/0Fv7VA=,iv:ADsQVZcNFQxIy1q956t1vVMlYvr6fmR7h9sb7t+pPuM=,tag:pZGjQcqYUR2wz1Yo+yGIhQ==,type:str]
-NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:6y7+zM1cOF7qq0RPjDdAEU8UR5eXvUs3,iv:RuRZA1TFPSMAViA7yHJ8yhW9HF8Gqb1s7YDMujkhmE0=,tag:RSWs2LTE5Yzu3Mv+em7nEw==,type:str]
-MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:gHqQjL6cbV6pvid5gjwpDyySDw==,iv:PH3ZisHrOTzg6QwCVKpy4zQkFk1e7ODUWoaFPXWeyTE=,tag:xDn/ryGhynLNensDgVn9uA==,type:str]
-SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:DeYpM/Ox2RsKM42Gypr1hFwQ,iv:at65NTyNdb7hUc+GEvh7YB8mT1J6KwHddaww8nNej6Y=,tag:49T+AIbg8ezqonlXHjSLfQ==,type:str]
-SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:t5mRmFPAm6wMHIcJRnychQdcdZCusyw=,iv:LexpKQA9lcm5O9a6/YJ1sA5JrqEf5aJ1qA/CadcKy30=,tag:k4g/M7lFlVGVC2hU9hAOmg==,type:str]
-HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:P7gAvib8tbpvIBPI8gNaszu4izcelw0d,iv:QSs6PRXsl0Em5WKHdK1WFsp2AnJ4XSlQD/zPknpWsBY=,tag:Gqc4+vRSqJWphnvImRlmDw==,type:str]
-SEARXNG_NFS_PATH: ENC[AES256_GCM,data:e1TQa2NArx+kPqSx76Gqh0kadgTkOK4B,iv:7K6YcxDyBx6CCv4dV28x0sx+UNpwz3DaQgNEocjALNo=,tag:ec81P8eGRy6OBm/Xrj4WJQ==,type:str]
-#ENC[AES256_GCM,data:jmmLSjRjVLVqR0IZBGnBrRc=,iv:4K1EBmGOvs8JepzI6kR1CKrg3V+ptmFDXyL3PQO6u5I=,tag:f2dy8yP6P+r7vgqrtgNSDg==,type:comment]
-METUBE_NFS_PATH: ENC[AES256_GCM,data:2ImkOeODytsMfTUr09vwYnmNVBrHc8+yioo=,iv:Pr6xO/QxWk1BEZ5Xu5z8uj1QQSC4Sph8ETDWd8W8XSQ=,tag:OF5ZouukN7tAJNaxh+YzZA==,type:str]
-VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:tqekDX9KIVVYRi19Lscyp8mbdyyAAJaYabfu2Yzkd/Zxl0yEhjPz,iv:Vxd7MoDkXdV/CGT8a9IQEj/6Mle50GlCA2wAmRaBKhc=,tag:gzXvAZ4oDgCDLYtCAT7DZQ==,type:str]
-OZRATES_NFS_PATH: ENC[AES256_GCM,data:pt0/Y/WsXNZE/TINcd5Vr+GYK0uDTWhebvTnqFA=,iv:fLvJm/uftupgmKM9BN/rBT4dB9/2DKxJb5viiGetsCY=,tag:P9Srnevk6NXNfBw1erUh5A==,type:str]
-#ENC[AES256_GCM,data:B1VNkRgjHVN0ZZ8qBnjqkvEKEVo3OMlSohfpEZh1nOBuNXts1MAOfO/W7el23j68RgIFRX3FaNo=,iv:IEPTMtVGi2uTnTYiLE5aa5fQVbKb/vWb3W8WoojbiZg=,tag:pMXdk65n8UfI8L/lvYZ6pA==,type:comment]
-#ENC[AES256_GCM,data:WXMI2LpXClLhXhEZhSVfhukBMF3V3MK39w==,iv:2f5TCUIbGeqqWmjZGxIGVOrhol0i3UwkzPipSaLxg+4=,tag:AHXnHAN/gV9UBgg8BEaDxQ==,type:comment]
-#ENC[AES256_GCM,data:77NXRZT6qpUKoyaPCscFTmj05sDdmIjFosrTXRGtlTlYoKHrv0FcWSyL4Fc+492Bf2tLd3xskUlfFO6dAZ/gL6bEsz1UVXxeqHHGUVA=,iv:hOY4zA5igz1Q39Q8QKZA6QHMvGizmRDe5F6n77WmxWw=,tag:yaM4AcAW+1Yqppg/IY3OFg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:zvbg3oGUI6Wk4nDV4ngV6KX8RJDsDnj1Ev27wQEDh4H/20nJAGKROB++XQ==,iv:qmIj5x0OOaRZlS+3CFtw4gK9uoOWSuyyWDtmugH2R0M=,tag:AJ/cawWroOp5L5y5fmN8xA==,type:str]
-#ENC[AES256_GCM,data:lAOJFIF52iq5ThYdWDMoyfUsIAsNUe1oZO4XZwskyjbezQHwJvWHT8h00/ti9xWdVj4pOzVNM3leE5Ql4lZPWA4vT+Uhr7o=,iv:jh0Jysn4LBneG/BwnaHKXwbHvQxahs4eqYBN8rW+ho8=,tag:ZNTQv0to85daMcKyaeGgKQ==,type:comment]
-#ENC[AES256_GCM,data:EOYJ1Er//4S27nT8bYOXAOh4impuuASUcJrHPnToMs6gfzdne1Hw60+amOSH+mXfTEyn8cJW,iv:Tu62KGOgi2A6pd/XhFBB0h9wq4saqw1b1/ShQJGsmBw=,tag:ICyBHS8D7/bpYshvgguA5A==,type:comment]
-#ENC[AES256_GCM,data:JQgzZ3oVaTfR8luJ8QNfBeYBXMRDeQP+hxFA4TGKjjkmlzs=,iv:ynuSJHRyLwSeaGQcdbyNJbiV3/VY0sVPbPjjj0Wq7wE=,tag:2BWPLC8yHqomR7VYPCi+UA==,type:comment]
-#ENC[AES256_GCM,data:UfvRjUnxR50Rlw/4x7rJWdmy63I0mk2L6NtlWsCFYRYa7pMz2T5Q,iv:3fmGzOMhYwhF1Lp3dFieChuAS11h7gY3miibIYmLeC0=,tag:H0kd7RAN9ghy63xeh5VbvA==,type:comment]
-#ENC[AES256_GCM,data:j7Q1hVPyWaaXLSKWhd4=,iv:xiFQHq0VBlfe1oWL+H2hk7/Pcl7TU30LaASHB8Ptiak=,tag:d4FQUKOvtdD1Uc0mPFkSmg==,type:comment]
-PODNET: ENC[AES256_GCM,data:RQ7bD1H+AAbncjBs5Q==,iv:7Dx6bCb36A8Y3CCfW3sk4ty57SoVJ2Pb0cH0/iC9onw=,tag:2CjC3LKHaRNssEmjuxEexQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:uiqD0psCdbk+CaomBg==,iv:1gmGQlzBmeiVHMUgx9WqKQjE6YwL39qriPRxOMKd+HQ=,tag:9Wg46+nO4/pHDcP3/H7RkQ==,type:str]
+#ENC[AES256_GCM,data:XUxyFG62oBA4hGnl,iv:oqywe9ZTtqEbjrDsYsl19X2X7+T18nolugIp9EBeq3A=,tag:6/2lIXT9dzg/l1isK5e/Pw==,type:comment]
+PROXMOX_IP: ENC[AES256_GCM,data:GhgAm0cHAFcCt4E=,iv:YkWyOeX4B4hCQ3wc4RJM+yEKFFVDqADlh86HROFXfzM=,tag:WSS+OkYjPaVIuXevdRHexA==,type:str]
+VIP: ENC[AES256_GCM,data:k4Cl8Qe6pU1X34k=,iv:cnycjRiLy+4gMkg1ruedwGDMdlW2DYtmNOvn2bniiug=,tag:uIQ4ujtfdM5AU4M9lbmwAA==,type:str]
+MASTER1IP: ENC[AES256_GCM,data:xyxsg82ki9QFHIQ=,iv:GqSt7P/dIQZcwMs9zHX/+fngWC/RCFhuhmxO8tqMpzE=,tag:rBAuJjkJ/g/9IIamvs1vLA==,type:str]
+GATEWAY: ENC[AES256_GCM,data:aMHpXbWnMGaU3Q==,iv:goqqqvMh5V966U2J7EmEM25g2ytQ/hybs8rq/Jy6iQ8=,tag:LAVEnxeShuA4W94y1/f1kg==,type:str]
+#ENC[AES256_GCM,data:FWUhNTlvgboU1uhRowA8,iv:0S6+IJTf4RSGkTiEWXkqb5WcOXGAEy9CJwQwdh+IrG0=,tag:IeDJ8wUdG8PZUhrKzbRbGQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:avhJsoQWcT8BBwDGkQYOctV7CwHPJX1bvA==,iv:/JiWqJPU8jfPQFTQoRYh7pHeHEa2ngRxYMHjR7ZMmwQ=,tag:8gnmEOWapQOhWdZi3fdVRg==,type:str]
+#ENC[AES256_GCM,data:vFmXHzeyr2HPgKLaesWpAtAKgFM6naQT1w==,iv:45Jaiug8tfdi3Eyd3ey9n4B6Q2IRigA/AMM/imaVTro=,tag:qVwikpl3XaHeteFC/fmm+g==,type:comment]
+NGINX_INTERNAL_IP: ENC[AES256_GCM,data:6ZfiR5igth6G8gPK,iv:1dj/aDWXXLGAtZkXvXG+e4tJV+uykwV2V1eqHnXgq7M=,tag:zN9w7P8jOkEk4IWkEXMRjw==,type:str]
+NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:DdLQ1UdHLjgISJb3,iv:iFb1dLNO6+eCXduomIUNpcJewx6Z5DOcCRCOPVcIAZc=,tag:6aUb/OmACMVHpWGpFAjCrg==,type:str]
+IP_WHITELIST: ENC[AES256_GCM,data:Mg0GZPqJTNn3mEYbtML78A/21XMTE/jn7rQ=,iv:gLqN2EERanhBYN8ofqfCqOaa4Mk9y1ysd1WnyXhqaTY=,tag:xEcIUXGGlOH1T50+5ERW8A==,type:str]
+BLOCKY_IP: ENC[AES256_GCM,data:qLNoWooLB8MoMZtS,iv:3qV1ZmLZH2W/j4l+kUXfCd7TLdx9FLLKfGQc+LnPuLs=,tag:WhwlW+0DpZ0itHTMQ3gAmQ==,type:str]
+DASHBOARD_IP: ENC[AES256_GCM,data:y/tzlNXAB9T0qDkv,iv:tSYfLVCriaE1TzhhfUVT+QWycF+AyIqC2p/fBkiUGqQ=,tag:T7KmHRQlT8RLxWP0q/iOww==,type:str]
+WG_EASY_IP: ENC[AES256_GCM,data:O8EexAYdQJdpY2xd,iv:/1QMGFLShy1yhR+MEuOo/wB1MAqyvVlqxbiC5Y96eGc=,tag:sO2nIYG8pkpNhWJt4H4u/Q==,type:str]
+MINECRAFT_IP: ENC[AES256_GCM,data:qJ3xsq9ueKmG6gL3,iv:Pd2FiTI1LdigM0Mxl8aJID5OaNM5HqfOj6iJpKHK7tE=,tag:RaFsfGpIP0xLqIIH4JQrNQ==,type:str]
+#ENC[AES256_GCM,data:+J9jwQeDCzrgepcL5hBGacht,iv:QzoL4mHo6R5vx15uuE7ZypfNddaNnge8w072bMjZF/0=,tag:c12mZt2YaHxFY/Gl6FCvog==,type:comment]
+BOREALIS_IP: ENC[AES256_GCM,data:PKmHZH7MoMuzj80=,iv:hUSyTZOcdKbHXs59g3Z/7x2hbwuyx8G0fyZtTC7iwOM=,tag:5KT5w0ikHevk7kUDTZWdLw==,type:str]
+#ENC[AES256_GCM,data:j8IIzGth9wcl+FsD4wM5fg==,iv:IUcODQpNGd6eMqc3eI2o37fLPKNo+OTmeNI+AP31qOc=,tag:hXYXehkcvvJ0SqZpiE20/g==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:TRkprrkR9p9fUBif1Q==,iv:zNOseUwHzaELWQzqrYyZaUuHdpw6iL3EtTWugBeLdG4=,tag:mrphs162uj14wauAgZTrAA==,type:str]
+DDNS_URL: ENC[AES256_GCM,data:ffhYYvU3fQP5JWYAC/jRNR7e+yY=,iv:siaZSLsk1uptx9YY7oAyNl2Y4YzVUUBBe49lDLr1pyo=,tag:a/JvSQ3uu4CKMxki/oiqZA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:hVQwh9LvUGxpAUUP3G1hgfNr7g==,iv:PclKD2PwV8gsmdDUgs3kNiPzxiFzX0lPPjIwGrDD/Bo=,tag:KvJgJU2WfPPJct+zlMbixw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:cKMnpyaAh9JPjUhSuKfaZW5oijzMRra+FbrRzTrzj24kMUOxgrjNtA==,iv:A6mr0F3H2VYyGuX6H70shplINIhhTXkUkz9hx+NLYbU=,tag:Wpjf8UQ7k0Zge7v3i9tUqw==,type:str]
+ZONE_ID: ENC[AES256_GCM,data:E1X6D47TgCRPvPzFpjp8XrKCTrBQIvfIR01xIPS3wEo=,iv:54vbtjcs3/tgF2ZWpAsvi3SyLQOKYzXnig2V02CJTQo=,tag:hEoiNHaX3BCrr/uvQI+MWA==,type:str]
+#ENC[AES256_GCM,data:cwHkn3KUEEE=,iv:JsNCj1LoQJGnhUniPoyMGjBUTHm+uPFBXpTY5eV1PM0=,tag:9n6q+wo0DYW8biHoXipzlw==,type:comment]
+GF_ADMIN: ENC[AES256_GCM,data:dSIL7uQwPuwF,iv:/MCF9NFTrHwoVBV7hYSOO6z8Tkl46LwJvh1cQDF3MW4=,tag:+YpCnpxjIx3rgz7k19N16w==,type:str]
+GF_PWD: ENC[AES256_GCM,data:q3vwcSVXphIAUQ4S/Q4Nukct27Cr0int,iv:wpTzWcaJ0Og7GOIUOIZ0M4LwG1elshfgGHpeFvCZbe8=,tag:h8kJbQbctklBKkiVK8Kt2A==,type:str]
+#ENC[AES256_GCM,data:kVwnBG1Fur5mqw==,iv:G5yO9oiy+JK/I5SPw1xCPLmWKj/5qGO0IdVxM1ZlDbc=,tag:mwYXLEbvlCmOwxs0KNfHCg==,type:comment]
+NEXTCLOUD_USER: ENC[AES256_GCM,data:6+88RaV8TTNd,iv:G5RReB48rzfI1xt1/HMFor0PfK98KHWujWtuH9i+1Tk=,tag:CxLPNb0V9blx6glMcmJ3AA==,type:str]
+NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:EVrfeAH5XmoT5pQlAYe2A/14g+0=,iv:5SHLoOvZZsD1e0wZKqYDoMQtNeCjA4lYmefFEJE8HuA=,tag:3HlRwseNk8N8Y19XzjDt2A==,type:str]
+NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:ERiSlMRPRXbSZwDqovSwoO0ffEbYi4zO,iv:Zlh3XHGv1L+S8XmB+yVS7VkxZnRWBE6SJ403xVsTXS8=,tag:/RRTYdOm6sqPwW2frYgDwA==,type:str]
+MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:Tu0Etc1EAU3tyDWC0bxA1QnXSQ==,iv:m8n9AxseDqVLDEj9DHricTNqkQPhzESyJvBexDfa5IQ=,tag:x8hn3pSTlO8txw6JOp9ZXA==,type:str]
+SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:QcEeaDyJTneBQsgd0OUoybAr,iv:L6gFmhBWg9czUhCX0wPYwVge/1HvOCPeHl0j+1KsJUI=,tag:f4Nndt/cHDCUAG9iK3PVjw==,type:str]
+SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:Se2UveftMAS/MRcvKz3qeozPSIfsG7c=,iv:gfTo1W9uF8qEW6F4rz+1jo+DGqoWZLNCt+U38Vd2PCM=,tag:03WlNywMCGRImcfNYgdTHQ==,type:str]
+HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:AZPn3vRRkZU/lxQVLXWOeXZ9/TvpYHLY,iv:IR4v1mcY3z2npDWDba1wriePp7DHktbNljhUJ0p/a0o=,tag:D2HlJZg2JoKe47v8pzPdcA==,type:str]
+SEARXNG_NFS_PATH: ENC[AES256_GCM,data:7EfXLfYgKjHjK5hTrJb+8+XygJcEWLeQ,iv:tYACDJDtMXZuvCDKR8vonHQ4GPrHPFJ/RmeQr+pHNIg=,tag:oKPbZFRZGq5jz68wjc9QaQ==,type:str]
+#ENC[AES256_GCM,data:OZ94eYiZFNDniTSHSdjTuGo=,iv:LK6cStM8xbYaGoxvOX7Q67woBAOyeH4z1fogEik2+qQ=,tag:WGNqajR86OxIKg6O3YNYGA==,type:comment]
+METUBE_NFS_PATH: ENC[AES256_GCM,data:SkDUm/gsgh4tcBv58RcW+AbdKHtCeUOQyqc=,iv:BnzHEUWmrL1YF2srso4akQGG/yAr6Tn8Go2HjV6X5Fo=,tag:R8B/Dj7BY4MgIsD9nEbSig==,type:str]
+VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:BADEgviza/z2i23YwT0gpCeYnqjronwC/+VAfBGXgUqdtUuUfJyX,iv:VkhP6glZ09YGKRjJ/BBst632ics2nG83tt+L9T6Jv44=,tag:wev3I2fuIq6jcSHWXmMlRg==,type:str]
+OZRATES_NFS_PATH: ENC[AES256_GCM,data:yNWVyrFmHTE/VRauXoGMcn5KrLnS4+wve4sm3OA=,iv:U/64T5DkljM4RScm6oubO0i3kqj9kmijAy7wKYqVYqE=,tag:XcO4ATSSmV4om2y6/0r9Pg==,type:str]
+#ENC[AES256_GCM,data:HD7pzT7Z/rUMh/79iMjP2NcgUlnGYgv0MuC9EjBmhHS4sVtMFLhLho6UzgIixuL02BJclnv59jU=,iv:RqEBYW7oFuXnHuK1PeJnETA40X8Gi0wrSVaRcriXd3s=,tag:DwCFRRvQpBqmMVRi8XKCpg==,type:comment]
+#ENC[AES256_GCM,data:lXJNusGc8bp+YkfQE+iXNKymrxeM1Jgk8A==,iv:l+0bugRlXEio9+SnpFDRGC1ef774ZdVHZZLoKwIB8qY=,tag:VHkogxWOqZvLT9fikTTwnA==,type:comment]
+#ENC[AES256_GCM,data:+y9TlSjNhXeKlrP65yfL6V1notcnJiIs35x3MTfU0B+e26EDHMQ+BQogVgBePf3aST7WAJL7TNcS3+1aJyeuhkBUpjzYuX3M8EZymYA=,iv:YXvJ9ll4nYGs7Ro9aDAfqhcqkDE0zMEb0i3hnPjZj3Y=,tag:6w2NUCmW6iBAT6JgwlUdYw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:6ILKip9C21+t8Ugk3zVhZD33C4qigblSmdQjZo0rEcVgOaG4p472aU8nxg==,iv:DYX/MzyqIhZYn7UtPGHlJ2HaYv9KW54Yo8CVKiNoEI4=,tag:vnue8COR/VeI4WnvgCQ3Qg==,type:str]
+#ENC[AES256_GCM,data:An1Rwt6xM0iBPrLJiIFbyYbtKQrO7Z1wPEw8qw71PJT8UFcMW3MzaHpW0Tl83wid8ZPwfRRtMj7tJTfu4aoYXKXj0yOkRks=,iv:TXjtL9wMVYJuvo0sLf0v+2EG3ZmqzQRGTw6apP6rU3Y=,tag:7bS0XZ9fAE4J7XJWdW5SBw==,type:comment]
+#ENC[AES256_GCM,data:xC0Byv/vc/zBiFVkHc4Bzfavfo5rGEPitXBXVrGu83nCoIHmDpx8Gbd0HUMvxOScDTsJqBGr,iv:hSwM9I9a5J79e2hnrKAQ8YMHw5/WQRWtmoX+wTPnUmE=,tag:Zd6rDGN4H6PUvz3gSMTQhg==,type:comment]
+#ENC[AES256_GCM,data:GHwg22ESvjm5AWhh1J4IdyKQhKNNFskTHhjLAN1+bd858UE=,iv:Yghx3oSp7l2/QvziMErW+nqSWS/PGF2/XoxaluSDJkY=,tag:FPuAxcLW8fJ8UJ9xhVyUFA==,type:comment]
+#ENC[AES256_GCM,data:fQwvT9cw6cA91ttT+ERZWb2ygGdBc0Ez5gYYI1dtZgUTM97SsGQp,iv:3LNHMO7Kf83zj7MbnMfdjoGO62HxkJQ7WZbeXzk/6CA=,tag:ohL0hwFvpKBnAuugpBX5tA==,type:comment]
+#ENC[AES256_GCM,data:Z1SPW7IfO5nURLAJyC8=,iv:9cGrQH83cq3up4MD6CYD+RUXMY0TnJdF7viavPSLSiQ=,tag:FmghxMesHav7gAHNvQwE9Q==,type:comment]
+PODNET: ENC[AES256_GCM,data:nylkqXnw0H3rH7WGUQ==,iv:RjFFrg3BRyF/2qNnBHDtVu/pME9rdF3Ro5hWKiLN0Ro=,tag:afCMydj9xm1hpY5hJkKRGQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:FhHPfweA6f+cMiOG0Q==,iv:xdwHKK6dam9CPsSB9EEOCLGxzhDP6fB6hkiBx3Vau8o=,tag:ZuZ7kSPLFDx+e++VumKhLg==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4M2lnYUl0Y1RRQVJQYU1n
-            Y1p3TWdBSENXTTlnSUVHckswNEhxRXJOR1VVCmhCWlc0YTFHdkJpT2doU3A2QnZ4
-            SHFtOUFtK01QZFQrOE42dGx6T1hTekUKLS0tIHJxQWdrcW9qVzhjQ3dndzVkOVdr
-            Wkl4TWZURGpYeEJzYmZreG1hZGJKSDQKeqgwBCbc3l/OQ7vxkbsPt5F2ShIG34O7
-            YF+tWxAcC2NjzZ0L7lX4tf+9eKB2RMCegq9q8bdV8HZvv6Qb96+pPg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3RzAxUHVTeEk2SkVNYmdZ
+            Nlc2YmRHRDlUekNQV2oyK3ZmQUV1TWJFMkRBCitHemxZUFRsT3NuZktONGxwTTVz
+            SlQwbGx3c1hDaldQcDBDZk5pOVdrdVkKLS0tIHZlUUdBMGtGN1RDRGJrS2RHR05v
+            MzB2alhXVW1oeTlvN0Y2VVJTR3dwN0EK/wEZEdirAdumulCd9EXaHbs3iH0/Mv7G
+            LvgYFarPse8nU4/QGVGGNFVst6hl3QKsmMXK0DD4ZTkJqZgUfXTYfA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T21:03:50Z"
-    mac: ENC[AES256_GCM,data:FnP/ZMkc2UOR9rk4TNWjhqFDdaMKzjn2/crSLn5JWR7492+4r59T4itoYdLjN0jXIkJ5C20ocOpbQ1mgJmTJs7IxpG/FE0Il0fqZV9zhKsVPC2dcRZjLifnq6IuBzERFg0zGaGyKoqdUTjFzfhmTRoTbxp3pwXjDCl+dPKMWk6M=,iv:1uw3fBO/hDJAFxjb+9U0V2jJlkmZhPgu3IJFUaZHCvQ=,tag:bM2tieI8EOx2B+QXr9cK8A==,type:str]
+    lastmodified: "2026-01-25T21:19:33Z"
+    mac: ENC[AES256_GCM,data:0hwKrEXtk3UEkv946EJcYLyiXP8c3uFUrP7BsiZiCBZksgK5jfKSdZ3qFmv268vvCj/1FekITgZ21DID50t8fJFpfqiUmoXGn202HFT8ra2/YAdykt8y9bPtifoup9jLMMRSd4ZXlArPE1mNj5ANWaSAV8w9I1EcTpA3xgOHOSo=,iv:SY51mTJwTvhQPKWLSRDSJskK6UoLOUvt9doSeupHWJg=,tag:3t0dTpQG4rjLmUUc+VLX+Q==,type:str]
     version: 3.10.2
